objects/Tax_Deadline__c.object
<CustomObject>
    <fields>
        <fullName>Expedite__c</fullName>
        <label>Expedite</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extended_Filing_Due_Date__c</fullName>
        <label>Extended Filing Due Date</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Return_Due_Date__c</fullName>
        <label>Tax Return Due Date</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Year_End__c</fullName>
        <label>Tax Year End</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Tax Deadline</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Nolan_Daigle_Tax_Deadline</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Tax Deadline Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Deadlines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>